datos escuelas oeste

--- a/pages/escuelas-oeste.html
+++ b/pages/escuelas-oeste.html
@@ -69,10 +69,7 @@
 					Directora: Da Pozzo, Sandra Año de Fundación: 1919
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
-					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
-					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
-					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					La Escuela Primaria Gobernador Emilio Olmos es una escuela primaria ubicada en Avenida Fuerza Aérea 2832, Cordoba Capital, Argentina. Fue fundada en 1919 y es una de las escuelas primarias más antiguas de la ciudad. Esta escuela se especializa en educación básica, así como en una variedad de materias de educación primaria como lengua, matemáticas, ciencias, arte, música y deportes. Esta escuela alberga a una comunidad diversa de alumnos y familias y ofrece clases en un ambiente amigable y acogedor. Ofrece programas y servicios para ayudar a los alumnos a tener éxito académico. La Escuela Primaria Gobernador Emilio Olmos también ofrece oportunidades de participación para los padres, como reuniones de padres, programas especiales y actividades recreativas. Esta escuela trabaja para construir una comunidad educativa unida y comprometida con el desarrollo de los alumnos.
 				</p>
 			</div>
 		</div>
@@ -98,7 +95,7 @@
 					Directora: Tevez, Claudia Año de Fundación: 1956
 				</p>
 				<p>
-					La Escuela Primaria Aeronáutica Argentina de Esmeralda y Díaz de la Fuente, ubicada en la localidad de Córdoba Capital, es una escuela de nivel primario que ofrece educación a niños y niñas desde los 6 a los 12 años de edad. Fue fundada en el año 1956 con el objetivo de formar a los futuros pilotos de la Fuerza Aérea Argentina.Actualmente la escuela cuenta con aulas equipadas con material didáctico moderno para la enseñanza de materias básicas como lenguaje, matemáticas, ciencias naturales, educación física y ciencias sociales. También se ofrecen clases de inglés e informática. Además, el establecimiento cuenta con una sala de video y una biblioteca equipada con libros y materiales de apoyo para el aprendizaje.
+					La Escuela Primaria Aeronáutica Argentina de Esmeralda y Díaz de la Fuente, ubicada en la localidad de Córdoba Capital, es una escuela de nivel primario que ofrece educación a niños y niñas desde los 6 a los 12 años de edad. Fue fundada en el año 1956 con el objetivo de formar a los futuros pilotos de la Fuerza Aérea Argentina. Actualmente la escuela cuenta con aulas equipadas con material didáctico moderno para la enseñanza de materias básicas como lenguaje, matemáticas, ciencias naturales, educación física y ciencias sociales. También se ofrecen clases de inglés e informática. Además, el establecimiento cuenta con una sala de video y una biblioteca equipada con libros y materiales de apoyo para el aprendizaje.
 				</p>
 			</div>
 		</div>
@@ -153,10 +150,7 @@
 					Directora: Quinteros, Silvia  Año de Fundación: 1954
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
-					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
-					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
-					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					La Escuela Primaria República Argentina es una institución educativa pública ubicada en la Calle Rufino Varela 2112, en el Barrio Ameguino Sur, de Córdoba Capital. Fue fundada en 1954 e inscripta en el Registro Oficial de Escuelas Primarias el 31 de julio de ese mismo año. La escuela ofrece educación de calidad a alumnos de nivel primario (de 1° a 6° grado), favoreciendo el desarrollo de habilidades y competencias que les permitan desempeñar un papel activo en la sociedad. El establecimiento cuenta con un claustro de profesores altamente capacitado, equipamiento moderno y una amplia gama de actividades educativas que permiten a los alumnos desarrollar sus habilidades académicas, físicas y emocionales. Además de la enseñanza regular, la escuela ofrece servicios complementarios como tutorías, actividades extraescolares, programas de apoyo a la primera infancia y viajes educativos. La escuela se esfuerza por promover la educación integral de sus alumnos, brindando un clima de respeto y confianza entre profesores, alumnos y padres.
 				</p>
 			</div>
 		</div>
