mas imagenes index

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<figcaption>Inicial</figcaption>
 					</figure>
 					<figure class="col-xl-4 col-md-4 col-sm-4 col-4 text-center">
-						<img src="assets/img/Directora Nivel Primario.png" alt="img Secretaria">
+						<img src="assets/img/Directora Nivel Primario1.png" alt="img Secretaria">
 						<figcaption>Primario</figcaption>
 					</figure>
 					<figure class="col-xl-4 col-md-4 col-sm-4 col-4 text-center">
@@ -129,7 +129,7 @@
 				</h3>
 				<div class="column">
 					<figure class="mt-5 col-xl-12 col-md-12 col-sm-12 col-12 text-center">
-						<img src="assets/img/img.png" alt="img secretario 1141">
+						<img src="assets/img/Inspector General.png" alt="img secretario 1141">
 						<figcaption>Inspector General Primaria</figcaption>
 					</figure>
 					<figure class="col-xl-12 col-md-12 col-sm-12 col-12 text-center">
