datos de las escuelas

--- a/pages/escuelas-centro.html
+++ b/pages/escuelas-centro.html
@@ -70,10 +70,7 @@
 					Directora: Palermo, Maria Estela Año de Fundación: 1941
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
-					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
-					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
-					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					La escuela ofrece una educación de calidad, orientada a la formación integral de los alumnos. Sus principales áreas de enseñanza son las asignaturas de lengua y literatura, matemáticas, ciencias naturales, educación física, historia, geografía, religión, música y arte. La Escuela Adolfo Saldías cuenta con una infraestructura moderna que incluye salones de clases dotados de sillas y mesas ergonómicas, un aula de informática, sala de profesores, sala de recreo, biblioteca, gimnasio, canchas deportivas, patio de recreo, comedor escolar, sala de profesores, sala de reuniones, aula de video, aula de música y una sala de exposiciones. La Escuela Primaria cuenta con un equipo docente altamente calificado y comprometido con la formación de los alumnos. Está adscrita al Ministerio de Educación de la Provincia de Córdoba y se rige por los lineamientos de la Ley de Educación Nacional.
 				</p>
 			</div>
 		</div>
@@ -99,10 +96,7 @@
 					Directora: Perez, Karina Lourdes Año de Fundación: 1929
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
-					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
-					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
-					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					Esta escuela ofrece educación pública de calidad para niños de todas las edades, desde primero hasta sexto grado. La Escuela Primaria Estados Unidos de Norteamérica cuenta con amplias y modernas instalaciones, así como una amplia variedad de actividades extraescolares. Estas incluyen clases de inglés, educación física, teatro, educación artística, ciencias naturales, tecnología y muchas otras. Además, el personal docente está especializado en las diferentes áreas para garantizar una educación completa. La Escuela Primaria Estados Unidos de Norteamérica también es parte de la Comunidad Educativa de Córdoba, que ofrece programas y actividades adicionales para los estudiantes. Estos incluyen talleres, seminarios, excursiones, campamentos de verano y mucho más. Además, la escuela organiza actividades para ayudar a los estudiantes a desarrollar sus habilidades sociales, como el trabajo en equipo y la solución de problemas. La Escuela Primaria Estados Unidos de Norteamérica se esfuerza por proporcionar un ambiente seguro y saludable para que los alumnos disfruten de su educación. Además, la escuela se asegura de que los estudiantes reciban una educación de calidad para que puedan alcanzar sus metas académicas y profesionales. Esto se logra mediante la implementación de estándares altos de educación y el compromiso de los profesores con los alumnos.
 				</p>
 			</div>
 		</div>
@@ -128,10 +122,7 @@
 					Directora: Acuña, Cristina Año de Fundación: 1959
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
-					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
-					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
-					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					La Escuela Primaria Hugo Wast es una institución educativa destinada a la educación de niños y niñas de primaria. Está regida por la Dirección General de Escuelas de la Provincia de Córdoba y funciona desde el año 1959. Cuenta con una planta docente compuesta por maestros y maestras especializados en distintas áreas. La Escuela Hugo Wast ofrece una educación integral, tanto en el ámbito académico como en el deportivo, artístico y cultural. Se trata de una escuela de vanguardia, con clases innovadoras, talleres de tecnología y espacios de trabajo colaborativo. El objetivo de la escuela es formar a sus alumnos como personas responsables y autónomas, capaces de tomar decisiones de acuerdo a sus principios éticos y morales. La Escuela Hugo Wast es una escuela abierta, donde los padres y madres de familia tienen una participación activa en la vida de la institución. Los padres y madres de familia tienen la oportunidad de participar en reuniones y actividades que se desarrollan en la escuela. Asimismo, cuentan con un equipo de profesionales que los apoyan en la gestión de los trámites burocráticos, así como en las inquietudes y problemas que se presenten. La Escuela Primaria Hugo Wast se caracteriza por ofrecer una educación de calidad, a través de programas educativos innovadores y una formación profesional basada en valores. Esta escuela también es reconocida por la excelencia de sus profesores y la motivación de sus alumnos.
 				</p>
 			</div>
 		</div>
@@ -157,10 +148,7 @@
 					Directora: Viviana Gauchat Año de Fundación: 1981
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
-					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
-					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
-					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					La Escuela Primaria Vaz Ferreira es una institución educativa que ofrece una educación de calidad a sus alumnos de primer y segundo ciclo de Educación Primaria. En la escuela se enseñan todas las materias de primaria de manera tradicional, así como también se enseñan materias como computación, educación física, música y educación artística. En la Escuela Primaria Vaz Ferreira se preocupan por los valores y la formación integral de los alumnos, ofreciendo una educación de calidad y un ambiente seguro. Los maestros de la escuela son profesionales altamente capacitados y con experiencia en la enseñanza. Además, la Escuela Primaria Vaz Ferreira cuenta con una gran variedad de actividades extracurriculares para los alumnos, como talleres artísticos, deportivos, de tecnología y de educación ambiental. Estas actividades les permiten a los alumnos desarrollar habilidades y conocimientos adicionales. La Escuela Primaria Vaz Ferreira es una excelente opción para los padres que desean que sus hijos reciban una educación de calidad. Esta escuela es un lugar donde los alumnos pueden desarrollar su potencial y prepararse para un futuro exitoso.
 				</p>
 			</div>
 		</div>
