--- a/pages/escuelas-sur.html
+++ b/pages/escuelas-sur.html
@@ -69,10 +69,7 @@
 					Directora: Ruiz, Virginia Año de Fundación: 1958
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
-					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
-					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
-					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					La Escuela Primaria Manuel Belgrano fue fundada en el año 1958 y cuenta con el nivel primario completo para los alumnos desde los 5 a los 12 años de edad. Esta escuela ofrece una formación integral a sus alumnos, contando con una amplia oferta de actividades y programas educativos y de formación para los alumnos. En la escuela se imparten clases para los niveles inicial, primario y secundario, con una amplia variedad de materias y contenidos. Los alumnos se benefician de una metodología de aprendizaje moderna, segura, centrada en el desarrollo del alumno, la creatividad y el trabajo en equipo. La Escuela Primaria Manuel Belgrano cuenta con un ambiente seguro y acogedor para los alumnos, con una atención personalizada y profesional a los alumnos y sus familias. La escuela ofrece una amplia variedad de actividades para que los alumnos desarrollen sus habilidades y fortalezcan sus conocimientos. Además, la escuela cuenta con una amplia variedad de servicios y programas como actividades extraescolares, talleres, proyectos educativos, programas de formación, etc. La Escuela Primaria Manuel Belgrano es una institución educativa reconocida por su calidad educativa y por el excelente trato que ofrece a sus estudiantes.
 				</p>
 			</div>
 		</div>
@@ -98,10 +95,7 @@
 					Directora: Zamora, Maria Fabiana Año de Fundación: 1972
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
-					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
-					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
-					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					La Escuela Primaria Dr. Benito Soria fue fundada en el año 1972 y está regida por el Ministerio de Educación de la Provincia de Córdoba. Cuenta con una amplia oferta educativa compuesta por diferentes niveles y cursos, además de contar con una amplia variedad de actividades extracurriculares. En la Escuela Primaria Dr. Benito Soria se esfuerzan por formar a los alumnos de forma integral, conocimientos académicos, habilidades sociales, educación física y también actitudes de respeto y respuesta ante la diversidad. Además de la educación, la Escuela Primaria Dr. Benito Soria ofrece asesoramiento psicopedagógico para el aprendizaje, así como también una atención personalizada a los alumnos. La Escuela Primaria Dr. Benito Soria cuenta con una infraestructura moderna y segura para el desarrollo de sus actividades. El edificio cuenta con una sala de informática, una biblioteca, una sala de arte y una cancha de fútbol. Además, los alumnos tienen acceso a servicios de salud y comidas gratuitas. La Escuela Primaria Dr. Benito Soria ofrece una educación de calidad y un ambiente seguro para el desarrollo de sus alumnos. Su equipo de trabajo está compuesto por profesionales con amplia experiencia en el ámbito educativo.
 				</p>
 			</div>
 		</div>
@@ -127,10 +121,7 @@
 					Directora: Mirta Matinez Año de Fundación: 1915
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est. Temporibus
-					dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium? Reiciendis, odio
-					adipisci quasi quia perferendis minus non consequatur magni possimus eum autem expedita
-					inciduntillum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					La Escuela Primaria Provincia de Catamarca de Córdoba Capital es una escuela primaria ubicada en la provincia de Córdoba, Argentina. Fue creada en por el gobierno provincial para brindar educación primaria a los niños de la región. La escuela ofrece cursos educativos desde el nivel inicial hasta el nivel secundario. Los alumnos tienen la oportunidad de recibir una educación de calidad en un ambiente seguro y acogedor. La escuela cuenta con una infraestructura moderna, como aulas con computadoras, laboratorios de informática, biblioteca y salas de estudio. Además, ofrece actividades culturales y deportivas para los alumnos. La escuela también cuenta con un programa de tutoría para ayudar a los alumnos a mejorar su rendimiento académico. El objetivo de la escuela es ofrecer una educación de calidad para todos los niños de la provincia de Córdoba y contribuir al desarrollo de la región.
 				</p>
 			</div>
 		</div>
@@ -156,10 +147,7 @@
 					Directora: Marcela Garay Año de Fundación: 1973
 				</p>
 				<p>
-					Historia: Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, molestias est.
-					Temporibus dolorum pariatur dolor obcaecati molestias nobis enim ipsa iste ullam laudantium?
-					Reiciendis, odio adipisci quasi quia perferendis minus non consequatur magni possimus eum autem
-					expedita incidunt illum cum iusto ullam qui natus libero magnam asperiores. Aliquid, quas dicta!
+					Esta escuela primaria se ha caracterizado por ofrecer una educación de excelencia a sus alumnos. En la Escuela Primaria República de Siria se enseñan los contenidos curriculares básicos que se imparten en todas las escuelas primarias, como matemáticas, lenguaje y comunicación, ciencias sociales, ciencias naturales, educación física y artística, entre otros. Además, se ofrecen actividades extra-curriculares como talleres de informática, inglés, deportes, etc. La Escuela Primaria República de Siria cuenta con una estructura moderna y una infraestructura adecuada para la labor docente. Los profesores están altamente capacitados para enseñar de la mejor forma posible a sus alumnos. La Escuela Primaria República de Siria se ha destacado por su énfasis en la formación integral del alumno, promoviendo el desarrollo de habilidades sociales, intelectuales, emocionales y creativas. Esta escuela se ha distinguido por su enfoque innovador en la educación y su compromiso con la formación de niños responsables y respetuosos.
 				</p>
 			</div>
 		</div>
