--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -11,7 +11,7 @@
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 		<!-- MI CSS -->
-	<link rel="stylesheet" href="../css/estilo.css">
+	<link rel="stylesheet" href="../CSS/estilo.css">
 </head>
 
 <body class="container-fluid">
